# agentic-rag

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  query_flow_test.mmd  query_process_main_flow_detailed.html  静态流程图索引.html
app/clients/: cache_client.py  document_registry.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py  neo4j_utils.py
app/config/: bailian_mcp_config.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py
app/core/: langsmith.py  load_prompt.py  logger.py
app/import_process/: __init__.py
app/lm/: embedding_utils.py  llm_utils.py  reranker_utils.py
app/query_process/: __init__.py
app/tool/: download_bgem3.py  download_reranker.py  offline_eval_cases.sample.jsonl  offline_eval_cases.seed50.jsonl  offline_eval_cli.py  offline_eval_local_services.py  replay_debug_trace.py  run_local_eval.py  run_offline_eval.py  run_ragas_eval.py  score_offline_eval.py  verify_incremental_import.py
app/utils/: debug_trace_utils.py  escape_milvus_string_utils.py  format_utils.py  normalize_sparse_vector.py  path_util.py  rate_limit_utils.py  sse_utils.py  task_utils.py
static_flowcharts/: answer_output_flow.mmd  import_main_flow.mmd  planner_and_item_confirm.mmd  query_main_flow.mmd  search_and_retry_flow.mmd  upload_api_flow.mmd
test/: 04-test_graph_flow.py  download_model.py  pytorch.py
test/offline_eval/: cli_smoke.run.jsonl  local_eval_smoke.report.json  local_eval_smoke.run.jsonl  local_eval_smoke2.report.json  local_eval_smoke2.run.jsonl  mcp_client_args.json  (+17 more)
(+46 files in other folders)
