[project]
name = "zhiku"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.8",
    "langsmith[openai-agents]>=0.7.32",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.36.3",
    "numpy>=2.4.4",
    "openai-agents>=0.4.2",
    "pandas>=3.0.2",
    "path>=17.1.1",
    "pymilvus>=2.6.12",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "ragas>=0.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "regex>=2026.4.4",
    "uvicorn[standard]>=0.46.0",
]
